# TinyRenderer

./: CMakeLists.txt  README.md  main.cpp
